# iitu_site_project

./: LICENSE  README.md  pyproject.toml
iitu_site/: manage.py  prepros.config
iitu_site/core/: settings.py  urls.py  views.py  wsgi.py
iitu_site/educational_programs/: models.py
iitu_site/educational_programs/migrations/: 0001_initial.py
iitu_site/educational_programs_and_categories/: admin.py  apps.py  models.py  schemas.py  views.py
iitu_site/educational_programs_and_categories/migrations/: 0001_initial.py  0002_alter_educationalprogram_icon.py
iitu_site/footer_contacts/: admin.py  apps.py  models.py  schemas.py  views.py
iitu_site/footer_contacts/migrations/: 0001_initial.py  0002_alter_contactselement_icon.py
iitu_site/footer_elements_and_categories/: admin.py  apps.py  models.py  schemas.py  views.py
iitu_site/footer_elements_and_categories/migrations/: 0001_initial.py  0002_alter_footerelement_options_and_more.py
iitu_site/footer_social_networks/: admin.py  apps.py  models.py  schemas.py  views.py
iitu_site/footer_social_networks/migrations/: 0001_initial.py  0002_alter_footersocialnetwork_options.py
iitu_site/header_navigation_elements/: admin.py  apps.py  models.py  schemas.py  views.py
iitu_site/iitu_site/: asgi.py  models.py  settings.py  urls.py
iitu_site/news/: admin.py  models.py  schemas.py  urls.py  views.py
iitu_site/partners/: admin.py  models.py  schemas.py  views.py
iitu_site/static/css/: main.css  (+1 more)
iitu_site/templates/: index.html
iitu_site/university_advantages/: admin.py  apps.py  models.py  schemas.py  views.py
(+18 files in other folders)
